# LightHost

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: HostStartup.cpp  IconMenu.cpp  PluginWindow.cpp  PluginWindow.h
